fix slipping background with scrollbar

--- a/css/index.sass
+++ b/css/index.sass
@@ -27,7 +27,7 @@ $bg-dot-space: $bg-stripe-width
 .background
   position: fixed
   z-index: -9999
-  width: 100%
+  width: 100vw
   height: 100vh
   margin: 0
   padding: 0
